# ots_hw_2_ip

./: CMakeLists.txt
.github/workflows/: release.yml
lib/version_lib/: version.cpp
src/: data_handler.h  main.cpp  print.h  read_input.h
tests/: tests.cpp
